Kubernetes-Basic-2-Days/Modules/Networking/Network Policies/network-policy-allow-all-ingress-yaml.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
