Kubernetes-Basic-2-Days/Modules/Networking/Network Policies/network-policy-default-deny-egress-yaml.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
